[package]
name = "nyst"
version = "0.1.4"
authors = ["Garen Tyler <garentyler@gmail.com>"]
edition = "2018"
description = "A simple to use parser library"
license = "MIT"
readme = "README.md"
repository = "https://github.com/garentyler/nyst/"
keywords = ["parser", "parse", "nyst", "stream"]
categories = ["compilers", "encoding", "parsing"]
